kubernetes/gatewayAPI/manifests/envoy_gateway/03_rate_limiting/ratelimit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 5
          unit: Minute
